Added textbook Afinn example

--- a/week10/SungLee-Week10.Rmd
+++ b/week10/SungLee-Week10.Rmd
@@ -17,4 +17,70 @@ theme: paper
 
 [Assignment on RPubs](https://rpubs.com/logicalschema/data607_week10 "Sung's Week 10 Assignment Rpubs")
 <br>
-[Rmd on Github](https://github.com/logicalschema/DATA607/blob/master/week10/SungLee-Week10.Rmd "Sung's Week 10 Assignment Github")
+[Rmd on Github](https://github.com/logicalschema/DATA607/blob/master/week10/SungLee-Week10.Rmd "Sung's Week 10 Assignment Github")  
+<br>
+
+
+
+## Introduction  
+
+**Assignment**  
+
+In Text Mining with R, Chapter 2 looks at Sentiment Analysis.  In this assignment, you should start by getting the primary example code from chapter 2 working in an R Markdown document.  You should provide a citation to this base code.  You’re then asked to extend the code in two ways:  
+
+-	Work with a different corpus of your choosing, and  
+
+-	Incorporate at least one additional sentiment lexicon (possibly from another R package that you’ve found through research).  
+
+As usual, please submit links to both an .Rmd file posted in your GitHub repository and to your code on rpubs.com.  You may work as a small team on this assignment.  
+
+**Note:** If you initially encounter problems loading AFINN, you will need to accept the license for the lexicon by typing in the console for R Markdown.  
+
+## Example from Textbook
+
+The code below is an example from chapter 2 of *Text Mining with R*^[https://www.tidytextmining.com/sentiment.html]
+
+```{r}
+
+# Based on code from https://www.tidytextmining.com/sentiment.html
+
+library(tidytext)
+library(dplyr)
+library(stringr)
+library(janeaustenr)
+library(ggplot2)
+
+get_sentiments("afinn")
+
+
+tidy_books <- austen_books() %>%
+  group_by(book) %>%
+  mutate(linenumber = row_number(),
+         chapter = cumsum(str_detect(text, regex("^chapter [\\divxlc]", 
+                                                 ignore_case = TRUE)))) %>%
+  ungroup() %>%
+  unnest_tokens(word, text)
+
+```
+
+
+```{r pride_prejudice, dependson = "tidy_books"}
+pride_prejudice <- tidy_books %>% 
+  filter(book == "Pride & Prejudice")
+
+pride_prejudice
+
+
+afinn <- pride_prejudice %>% 
+  inner_join(get_sentiments("afinn")) %>% 
+  group_by(index = linenumber %/% 80) %>% 
+  summarise(sentiment = sum(value)) %>% 
+  mutate(method = "AFINN")
+
+bind_rows(afinn) %>%
+  ggplot(aes(index, sentiment, fill = method)) +
+  geom_col(show.legend = FALSE) +
+  facet_wrap(~method, ncol = 1, scales = "free_y")
+
+```
+
